test/sema/lambdas/lambda_assign_to_capture_value.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  let x = 0;

  // CHECK: [[# @LINE + 1 ]]:12: error: pointee of type '*(closure@<source>:6:3)' cannot be mutated
  ->() { x = 1; };
}
